[gd_scene load_steps=62 format=2]

[ext_resource path="res://assets/sprites/default_laser_animated000.png" type="Texture" id=1]
[ext_resource path="res://scenes/laser_default.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/default_laser_outline.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/explosions/laser_explosion000_64x62.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/laser000.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/laser002.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 233, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 62 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 128, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 256, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 320, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 384, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 448, 62, 64, 62 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 128, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 192, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 256, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 320, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 384, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 448, 124, 64, 62 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 64, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 128, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 192, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 256, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 320, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 384, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 448, 186, 64, 62 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 0, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 64, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 128, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 192, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 256, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 320, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 384, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 448, 248, 64, 62 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 0, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 64, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 128, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 192, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 256, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 320, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 384, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 448, 310, 64, 62 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 0, 372, 64, 62 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 64, 372, 64, 62 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 128, 372, 64, 62 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 192, 372, 64, 62 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 256, 372, 64, 62 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Laser" type="Area2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Beam" type="CollisionShape2D" parent="."]
position = Vector2( 250, 0 )
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="Body" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -7, 3, -7, -3, -5, -5, -3, -5, -3, -15, -2, -16, 3, -16, 4, -15, 4, -5, 9, -5, 12, -2, 19, -2, 20, -1, 20, 1, 19, 2, 12, 2, 9, 5, 4, 5, 4, 15, 3, 16, -2, 16, -3, 15, -3, 5, -5, 5 )

[node name="Fire_Timer" type="Timer" parent="."]
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="."]
one_shot = true

[node name="Selected" type="Sprite" parent="."]
position = Vector2( 6.5, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 238, 0 )
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 2

[node name="Beam" type="CPUParticles2D" parent="Sprite"]
visible = false
position = Vector2( 0.000793457, 220 )
rotation = 3.88859
emitting = false
amount = 800
lifetime = 120.0
speed_scale = 37.41
explosiveness = 0.09
initial_velocity = 3.0
initial_velocity_random = 0.84
angular_velocity = 0.29
angular_velocity_random = 0.44
orbit_velocity = 1.0
linear_accel = -76.23
color = Color( 1, 0, 0, 1 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 55 )

[node name="Removal_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="sfx" type="Node" parent="."]

[node name="sfx0" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="sfx2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_Fire_Timer_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_Cooldown_Timer_timeout"]
[connection signal="timeout" from="Removal_Timer" to="." method="_on_Removal_Timer_timeout"]
